Updated todo list

--- a/TODO
+++ b/TODO
@@ -1,15 +1,9 @@
 Todo List 
 
-
-Topology Management
- - Support multiple connections from the same host, using some identifier.
- - Support changes in topology, broadcast new topo to clients on change and 1/2 hop neighbors
- - support polling 1 and 2 hop neighbors from olsrd json info and request their topology and add it to local list.
-
-Base Protocol
- - basic message passing
-
-Javascript Library
- - handle topology change messages
-
+* Broadcast message to app
+* Access point (ap) to ap routing of messages
+* js browser storage system for apps and distributed storage system
+* client display name creation system
+* allow disconnect method for signing off
+* timestamp on message, could be done in js or backend
 
